[tool.poetry]
name = "pikachu"
version = "0.1.0"
description = ""
authors = ["Dmytro <molokoiedov.95@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Adafruit-GPIO = "1.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
